--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,3 @@
 @import "tailwindcss";
-/* must use .css instead of .scss extension for this file since tailwind is using postcss
+/* must use .css instead of .scss extension for this file since tailwind is using postcss */
+@custom-variant dark (&:where(.dark, .dark *));
